--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                 </h1>
                 <div class="section-container d-flex">
                     <div class="popular-artist">
-                        <a href="#player">
+                        <a href="#">
                             <div class="image-container play-pause">
                                 <img src="img/EdSheeran.jpg" alt="">
                             </div>
@@ -355,7 +355,7 @@
                         </div>
                     </div>
                     <div class="popular-artist">
-                        <a href="#player">
+                        <a href="#">
                             <div class="image-container play-pause">
                                 <img src="img/SelenaGomez.jpg" alt="">
                             </div>
@@ -365,7 +365,7 @@
                         </div>
                     </div>
                     <div class="popular-artist">
-                        <a href="#player">
+                        <a href="#">
                             <div class="image-container play-pause">
                                 <img src="img/weeknd.jpg" alt="">
                             </div>
@@ -376,7 +376,7 @@
                     </div>
 
                     <div class="popular-artist">
-                        <a href="#player">
+                        <a href="#">
                             <div class="image-container play-pause">
                                 <img src="img/EllieGoulding.jpg" alt="">
                             </div>
@@ -386,7 +386,7 @@
                         </div>
                     </div>
                     <div class="popular-artist">
-                        <a href="#player">
+                        <a href="#">
                             <div class="image-container play-pause">
                                 <img src="img/charliePuth.jpg" alt="">
                             </div>
@@ -396,7 +396,7 @@
                         </div>
                     </div>
                     <div class="popular-artist">
-                        <a href="#player">
+                        <a href="#">
                             <div class="image-container play-pause">
                                 <img src="img/TaylorSwift.jpg" alt="">
                             </div>
@@ -424,7 +424,7 @@
                         <div class="name d-flex love">
                             Love
                         </div>
-                        <a href="#player">
+                        <a href="#">
                             <div class="image-container play-pause">
                                 <img src="img/love.jpg" alt="">
                             </div>
@@ -435,7 +435,7 @@
                         <div class="name d-flex retro">
                             Retro
                         </div>
-                        <a href="#player">
+                        <a href="#">
                             <div class="image-container play-pause">
                                 <img src="img/retro.jpeg" alt="">
                             </div>
@@ -445,7 +445,7 @@
                         <div class="name d-flex chill">
                             Chill
                         </div>
-                        <a href="#player">
+                        <a href="#">
                             <div class="image-container play-pause">
                                 <img src="img/chill.jpg" alt="">
                             </div>
@@ -456,7 +456,7 @@
                         <div class="name d-flex workout">
                             Workout
                         </div>
-                        <a href="#player">
+                        <a href="#">
                             <div class="image-container play-pause">
                                 <img src="img/workout.jpg" alt="">
                             </div>
@@ -467,7 +467,7 @@
                         <div class="name d-flex rock">
                             Rock
                         </div>
-                        <a href="#player">
+                        <a href="#">
                             <div class="image-container play-pause">
                                 <img src="img/rock.jpeg" alt="">
                             </div>
@@ -478,7 +478,7 @@
                         <div class="name d-flex pop">
                             Pop
                         </div>
-                        <a href="#player">
+                        <a href="#">
                             <div class="image-container play-pause">
                                 <img src="img/pop.jpg" alt="">
                             </div>
@@ -500,7 +500,7 @@
                         <div class="name d-flex">
                             party
                         </div>
-                        <a href="#player">
+                        <a href="#">
                             <div class="image-container play-pause">
                                 <img src="img/party.jpg" alt="">
                             </div>
@@ -510,7 +510,7 @@
                         <div class="name">
                             electronic
                         </div>
-                        <a href="#player">
+                        <a href="#">
                             <div class="image-container play-pause">
                                 <img src="img/electronic.jpeg" alt="">
                             </div>
@@ -520,7 +520,7 @@
                         <div class="name">
                             road trip
                         </div>
-                        <a href="#player">
+                        <a href="#">
                             <div class="image-container play-pause">
                                 <img src="img/roadtrip.jpg" alt="">
                             </div>
