create single playlist

--- a/index.html
+++ b/index.html
@@ -491,12 +491,12 @@
             <!-- End Categories -->
 
             <!-- Popular Categories -->
-            <section id="most-popular">
+            <section id="mood">
                 <h1 class="section-title">
                 </h1>
                 <div class="section-container d-flex">
 
-                    <div class="most-popular-element">
+                    <div class="mood-element">
                         <div class="name d-flex">
                             party
                         </div>
@@ -506,7 +506,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="most-popular-element">
+                    <div class="mood-element">
                         <div class="name">
                             electronic
                         </div>
@@ -516,7 +516,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="most-popular-element">
+                    <div class="mood-element">
                         <div class="name">
                             road trip
                         </div>
